--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "rsbuild build",
+    "check": "biome check --write",
+    "dev": "rsbuild dev --open",
+    "format": "biome format --write",
+    "preview": "rsbuild preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -13,13 +15,14 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.4",
-    "vite": "^3.1.8"
+    "typescript": "^5.5.2",
+    "@rsbuild/core": "1.0.1",
+    "@rsbuild/plugin-react": "1.0.1"
   }
 }
