--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "average-project",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "build": "rsbuild build",
     "check": "biome check --write",
