--- a/package.json
+++ b/package.json
@@ -11,19 +11,29 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.0",
+    "@rsbuild/core": "1.0.4",
+    "@rsbuild/plugin-react": "1.0.2",
+    "@types/node": "^22.5.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
+    "lucide-react": "^0.441.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.4.11",
-    "typescript": "^5.5.2",
-    "@rsbuild/core": "1.0.4",
-    "@rsbuild/plugin-react": "1.0.2"
+    "typescript": "^5.5.2"
   }
 }
